# OpenGLWidget

./: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  README.md  main.cpp  trianglerenderer.cpp  trianglerenderer.h
